# herakles-adventure

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  bullfinchs-mythology.md  characters.yaml  enhance_entities.py  enhance_lore_entities.py  god_chat.py  main.py  poet_adventure.py  pyproject.toml  rag_system.py  requirements.txt  test_model.py  validate_poets.py  window.py
.cursor/rules/: general-rule.mdc  myth-rpg-rules.mdc
.windsurf/rules/: general_rules.md  myth_rpg_rules.md
agents/: dense_retriever.py  entity_agent.py  orchestrator.py  reranker.py  sparse_retriever.py  summarizer.py
backup/: PROPER_DATA_MODEL.md  chunk_bullfinch_md.py  clean_chunks.py  enhance_entities.py  entity_extraction_plan.md  extract_lore_entities.py  poet_adventure.py  poetic_duels.py
docs/: MODEL_UPGRADE_RECOMMENDATIONS.md
entities/poets/: amergin.json  opponents.json  taliesin.json
lore_chunks/: 001_INTRODUCTION.md  001_TEST.md  002_ROMAN_DIVINITIES.md  003_PROMETHEUS_AND_PANDORA.md  004_AND_PROCRIS.md  005_APOLLO_AND_DAPHNE.md  006_PYRAMUS_AND_THISBE.md  007_CEPHALUS_AND_PROCRIS.md  008_LATONA_AND_THE_RUSTICS.md  009_CALLISTO.md  010_DIANA_AND_ACTAEON.md  011_LATONA_AND_THE_RUSTICS.md  012_PHAETON.md  013_MIDAS_BAUCIS_AND_PHILEMON.md  014_BAUCIS_AND_PHILEMON.md  015_PROSERPINE_GLAUCUS_AND_SCYLLA.md  016_GLAUCUS_AND_SCYLLA.md  017_HYACINTHUS.md  018_DRYOPE.md  019_VENUS_AND_ADONIS.md  020_APOLLO_AND_HYACINTHUS.md  021_CEYX_AND_HALCYONE.md  022_VERTUMNUS_AND_POMONA.md  023_CUPID_AND_PSYCHE.md  024_CADMUS_THE_MYRMIDONS.md  025_THE_MYRMIDONS.md  026_NISUS_AND_SCYLLA.md  027_ECHO_AND_NARCISSUS.md  028_CLYTIE.md  029_HERO_AND_LEANDER.md  030_MINERVA.md  031_NIOBE.md  032_THE_GRAEAE_AND_GORGONS.md  033_PERSEUS_AND_MEDUSA.md  034_PERSEUS_AND_ATLAS.md  035_THE_SEA_MONSTER.md  036_THE_WEDDING_FEAST.md  037_AND_PYGMIES.md  038_THE_SPHINX.md  039_PEGASUS_AND_THE_CHIMAERA.md  (+124 more)
lore_entities/: 001_INTRODUCTION.json  001_TEST.json  002_ROMAN_DIVINITIES.json  003_PROMETHEUS_AND_PANDORA.json  004_AND_PROCRIS.json  005_APOLLO_AND_DAPHNE.json  006_PYRAMUS_AND_THISBE.json  007_CEPHALUS_AND_PROCRIS.json  008_LATONA_AND_THE_RUSTICS.json  009_CALLISTO.json  010_DIANA_AND_ACTAEON.json  011_LATONA_AND_THE_RUSTICS.json  012_PHAETON.json  013_MIDAS_BAUCIS_AND_PHILEMON.json  014_BAUCIS_AND_PHILEMON.json  015_PROSERPINE_GLAUCUS_AND_SCYLLA.json  016_GLAUCUS_AND_SCYLLA.json  017_HYACINTHUS.json  018_DRYOPE.json  019_VENUS_AND_ADONIS.json  020_APOLLO_AND_HYACINTHUS.json  021_CEYX_AND_HALCYONE.json  022_VERTUMNUS_AND_POMONA.json  023_CUPID_AND_PSYCHE.json  024_CADMUS_THE_MYRMIDONS.json  025_THE_MYRMIDONS.json  026_NISUS_AND_SCYLLA.json  027_ECHO_AND_NARCISSUS.json  028_CLYTIE.json  029_HERO_AND_LEANDER.json  030_MINERVA.json  031_NIOBE.json  032_THE_GRAEAE_AND_GORGONS.json  033_PERSEUS_AND_MEDUSA.json  034_PERSEUS_AND_ATLAS.json  035_THE_SEA_MONSTER.json  036_THE_WEDDING_FEAST.json  037_AND_PYGMIES.json  038_THE_SPHINX.json  039_PEGASUS_AND_THE_CHIMAERA.json  (+125 more)
utils/: name_mapping.py
