[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myth-rpg"
version = "0.1.0"
description = "Mythology themed text RPG"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "safetensors>=0.4.0",
    "rank_bm25>=0.2.2",
    "nltk>=3.8.1"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
myth-rpg = "god_chat:main"

[tool.hatch.build]
packages = ["god_chat"]

[tool.hatch.build.targets.wheel]
packages = ["god_chat"]

[tool.uv]
# UV-specific settings can go here