[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Add this section to allow direct references
[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "myth-rpg"
version = "0.1.0"
description = "Mythology themed text RPG"
readme = "README.md"
authors = [
    { name = "voolyvex", email = "your.email@example.com" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch==2.4.1",
    "torch-directml==0.2.5.dev240914",
    "torchvision>=0.19.1",
    # Use a newer Transformers compatible with BGE reranker and chat templates
    "transformers>=4.52.0,<4.53",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    # Ensure recent sentence-transformers for BGE models
    "sentence-transformers>=2.5.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
    "safetensors>=0.4.0",
    "rank_bm25>=0.2.2",
    "flashrank>=0.1.0",
    "spacy>=3.7.0",
    "nltk>=3.8.1",
    "requests>=2.31.0",
    # On non-Windows systems with CUDA, install flash-attn for performance.
    # On Windows (with AMD/DirectML), this will be ignored, and the runtime
    # patch in god_chat.py handles the model's dependency.
    "flash-attn>=2.7.0; platform_system != 'Windows'",
    # Optional: kernels recommended by gpt-oss model card (no-op if unused)
    # Note: Version constraint removed due to availability issues
    "kernels>=0.11.0"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
myth-rpg = "god_chat:main"

[tool.hatch.build]
packages = ["god_chat"]

[tool.hatch.build.targets.wheel]
packages = ["god_chat"]

[tool.uv]
# UV-specific settings can go here